--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  dio: any
-  path_provider: any
-
+  image_picker: ^0.4.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
